Worked vector-kafka

--- a/roles/vector/files/Dockerfile
+++ b/roles/vector/files/Dockerfile
@@ -8,4 +8,6 @@ RUN curl \
   https://packages.timber.io/vector/0.18.0/vector-0.18.0-amd64.deb
 RUN dpkg -i vector-0.18.0-amd64.deb
 
-ENTRYPOINT ["/usr/bin/vector"]
+CMD ["/usr/bin/vector"]
+#, "--config", "/etc/vector/vector.yaml"]
+#ENTRYPOINT ["/usr/bin/vector --config /etc/vector/vector.yaml"]
