Add grok pattern to nginx log

--- a/roles/elastic/files/logstash.conf
+++ b/roles/elastic/files/logstash.conf
@@ -6,6 +6,12 @@ input {
   }
 }
 
+filter {
+  grok {
+    match => { "message" => "%{IPORHOST:clientip} - - \[%{HTTPDATE:date}\] \"%{WORD:method} %{NOTSPACE:url} HTTP\/%{NUMBER:http_version}\" %{NUMBER:response} %{NUMBER:body_sent_bytes}" }
+  }
+}
+
 output {
   elasticsearch {
     hosts => ["elastic:9200"]
