--- a/roles/vector/tasks/main.yaml
+++ b/roles/vector/tasks/main.yaml
@@ -29,5 +29,6 @@
       - '8383:8383'
     volumes:
       - '/opt/vector/vector.toml:/etc/vector/vector.toml'
+      - '/opt/vector/syslog:/var/log/syslog'
     networks:
     - name: logging
