--- a/roles/elastic/files/logstash.conf
+++ b/roles/elastic/files/logstash.conf
@@ -14,7 +14,7 @@ filter {
 
 output {
   elasticsearch {
-    hosts => ["elastic:9200"]
+    hosts => ["elasticsearch:9200"]
     index => ["kafka"]
     codec => plain
   }
