--- a/roles/elastic/tasks/main.yaml
+++ b/roles/elastic/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Run elasticsearch
   docker_container:
-    name: elastic
+    name: elasticsearch
     image: docker.elastic.co/elasticsearch/elasticsearch:7.16.0
     state: started
     recreate: yes
